# pyflayer

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml  publish.yml
docs/: stubs_zh_tw.md
docs/architecture/: plugin-expansion-plan.md
examples/: 01_hello_bot.py  02_goto_player.py  03_drasl_auth.py
examples/01_hello_bot/: README.md  main.py
examples/02_goto_player/: main.py
examples/03_drasl_auth/: main.py
examples/demos/drasl_auth/: .env.example  README.md  main.py
examples/demos/goto_player/: README.md  main.py
examples/demos/hello_bot/: README.md  main.py
examples/tests/: README.md  _common.py
scripts/: check_stubs.py  format.sh  generate_stubs.py  parse_dts.py
src/mineflayer/js/: bot.js  package-lock.json  package.json
src/mineflayer/py/: .env.example  bot.py
src/minethon/: __init__.py  _bridge.py  _events.py  _handlers.py  _type_shells.py  bot.py  bot.pyi  config.py  errors.py  raw.py
src/minethon/_bridge/: _events.py  _util.py  event_relay.py  js_bot.py  marshalling.py  plugin_host.py  plugin_registry.py  runtime.py
src/minethon/_bridge/js/: helpers.js
src/minethon/_bridge/plugins/: _base.py  armor_manager.py  dashboard.py  gui.py  hawkeye.py  panorama.py  pathfinder.py  tool_plugin.py
src/minethon/_bridge/services/: __init__.py  viewer.py  web_inventory.py
src/minethon/api/: __init__.py  armor.py  combat.py  dashboard.py  gui.py  navigation.py  observe.py  panorama.py  plugins.py  tool.py
src/minethon/models/: __init__.py  __init__.pyi  block.py  entity.py  errors.py  events.py  experience.py  game_state.py  item.py  player_info.py  recipe.py  time_state.py  vec3.py  window.py
src/pyflayer/: __init__.py  bot.py  config.py
src/pyflayer/_bridge/: _events.py  event_relay.py  js_bot.py  marshalling.py  plugin_host.py  runtime.py
src/pyflayer/_bridge/js/: helpers.js
src/pyflayer/api/: __init__.py  navigation.py  observe.py
src/pyflayer/models/: __init__.py  block.py  entity.py  errors.py  events.py  item.py
tests/: test_bot.py
tests/integration/: conftest.py  test_chat.py  test_connect.py  test_navigation.py  test_world.py
tests/unit/: test_armor_manager.py  test_block.py  test_bot.py  test_bridge_events.py  test_config.py  test_dashboard.py  test_entity.py  test_event_relay.py  test_events.py  test_gui.py  test_hawkeye.py  test_item.py  test_marshalling.py  test_navigation.py  test_panorama.py  test_pathfinder_bridge.py  test_plugin_host.py  test_plugin_registry.py  test_plugins_api.py  test_tool_plugin.py  test_vec3.py  test_viewer_service.py  test_web_inventory.py
