[project]
name = "minethon"
version = "0.1.0a1"
description = "A Python-first Mineflayer SDK for building Minecraft bots with a typed, high-level async API."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "javascript>=1!1.2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/minethon"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.1",
    "ruff>=0.15",
    "pyright>=1.1",
]

[tool.ruff]
src = ["src"]
fix = true
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # conflict with formatter
    "E501", "Q000", "Q003", "COM812", "ISC001",

    # project-wide opt-outs
    "D",       # docstring rules (managed separately)
    "ARG",     # unused arguments
    "FBT001", "FBT002",  # boolean-typed parameters
    "N818",    # exception naming
    "S101",    # assert in non-test code
    "TRY003", "EM101", "EM102",  # exception message style
    "SIM105",  # contextlib.suppress preferred — style choice across codebase
    "ASYNC109", # timeout= param is idiomatic for this SDK's public API
    # try/except error-wrapping patterns used throughout SDK, not just bridge
    "TRY300", "TRY301"
]
allowed-confusables = ["（", "）", "，", "！"]
pylint.max-args = 6
mccabe.max-complexity = 20
pylint.max-branches = 15
pylint.max-statements = 65

[tool.ruff.lint.per-file-ignores]
# test suite — relaxed for assertions, magic values, private access
"tests/*" = [
    "INP001",              # not a namespace package
    "ANN",                 # type annotations not required in tests
    "SLF001",              # private member access for white-box testing
    "SIM117",              # nested with-statements OK
    "S105", "S106", "S107", "S108", # hardcoded credentials and paths in fixtures
    "PLR2004",             # magic values in assertions
    "FBT003",              # boolean positional values in test calls
    "PLC0415",             # local imports inside test methods are fine
    "RUF006",              # asyncio.create_task without storing result (test pattern)
]

# examples — written by contributors, intentionally loose
"examples/**" = [
    "INP001",              # not a namespace package
    "ANN",                 # type annotations not required
    "T201",                # print() is expected
    "PLR2004",             # magic values (ports, coords) are fine
    "S",                   # security lints less relevant in demo code
    "ERA001",              # commented-out code OK while iterating
    "BLE001",              # broad except is fine for demo error handling
    "ASYNC110",            # sleep-in-loop keep-alive is idiomatic for bot examples
]

# bridge internals — JS interop constraints
"src/minethon/_bridge/*" = [
    "ANN401",  # Any is unavoidable for JS proxy objects
    "BLE001",  # broad except catches unpredictable JS proxy errors
    "N806",    # JS camelCase local variables (e.g. displayName, tradeDisabled)
]
# files outside _bridge/ that still interface directly with JS proxies
"src/minethon/api/observe.py" = ["ANN401"]  # js_bot / on_fn params are JS proxies
"src/minethon/raw.py" = ["ANN401"]           # explicit raw escape hatch, Any by design
"src/minethon/_bridge/runtime.py" = [
    "PLC0415", # delayed `import javascript` for conditional bridge loading
    "S603", "PLW1510",   # subprocess.run for node version check
    "PLR2004", # magic value 22 for Node.js minimum version
]
"src/minethon/_bridge/js_bot.py" = ["S110", "FBT003"]
"src/minethon/_bridge/plugin_host.py" = ["FBT003"]

# bot.py — large orchestration class with known structural exceptions
"src/minethon/bot.py" = [
    "ANN401",  # internal helpers and raw escape hatch methods use JS proxy Any
    "FBT003",  # boolean positional for bridge control calls
    "PLR2004", # magic value 8 for quick_bar_slot range
    "PLR0913", # Bot.__init__ has many config parameters by design
    "SLF001",  # intentional access to observe._bind_js / _reset_state / _on_raw
]

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring a running Minecraft server",
]

[tool.coverage.run]
source = ["src/minethon"]
omit = ["src/minethon/_bridge/js/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
