[project]
name = "minethon"
version = "0.2.0a1"
description = "A Python-first Mineflayer SDK with a synchronous, IDE-friendly callback API."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "javascript>=1!1.2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/minethon"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.1",
    "ruff>=0.15",
    "pyright>=1.1",
]

[tool.ruff]
src = ["src"]
fix = true
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # conflict with formatter
    "E501", "Q000", "Q003", "COM812", "ISC001",

    # project-wide opt-outs
    "D",       # docstring rules (managed separately)
    "ARG",     # unused arguments
    "FBT001", "FBT002",  # boolean-typed parameters
    "N818",    # exception naming
    "S101",    # assert in non-test code
    "TRY003", "EM101", "EM102",  # exception message style
    "SIM105",  # contextlib.suppress preferred — style choice across codebase
    # try/except error-wrapping patterns used throughout SDK, not just bridge
    "TRY300", "TRY301"
]
allowed-confusables = ["（", "）", "，", "！"]
pylint.max-args = 6
mccabe.max-complexity = 20
pylint.max-branches = 15
pylint.max-statements = 65

[tool.ruff.lint.per-file-ignores]
# bridge / public entry — interops with untyped JSPyBridge proxies
"src/minethon/_bridge.py" = [
    "ANN401",  # JS proxy return types are Any by necessity
]
"src/minethon/bot.py" = [
    "ANN401",  # Bot.__init__ / __getattr__ / create_bot expose Any for JS proxy interop
]

# Generated type overlays — mirror upstream camelCase / TypeScript names verbatim
"src/minethon/*.pyi" = [
    "ALL",  # .pyi is 1:1 with index.d.ts; style rules don't apply
]

# Build-time code generators — developer-only utilities, relaxed lint
"scripts/*.py" = [
    "INP001",   # not a package
    "ANN",      # annotations optional
    "T201",     # print() used for warnings
    "S101",     # asserts fine
    "PLR",      # all pylint-refactor (return count, branch count, magic values)
    "PLW",      # pylint-warning (loop-var reassign is intentional)
    "C901",     # complexity high in one-off generators
    "ERA001",   # commented-out examples OK
    "BLE001",
    "TRY",
    "SIM",      # ternary / simplify — generator readability over style
    "RET",      # return style
    "FURB171",  # membership in single-item container (explicit vs equality)
]

# test suite — relaxed for assertions, magic values, private access
"tests/*" = [
    "INP001",              # not a namespace package
    "ANN",                 # type annotations not required in tests
    "SLF001",              # private member access for white-box testing
    "SIM117",              # nested with-statements OK
    "S105", "S106", "S107", "S108", # hardcoded credentials and paths in fixtures
    "PLR2004",             # magic values in assertions
    "FBT003",              # boolean positional values in test calls
    "PLC0415",             # local imports inside test methods are fine
]

# examples — written by contributors, intentionally loose
"examples/**" = [
    "INP001",              # not a namespace package
    "ANN",                 # type annotations not required
    "T201",                # print() is expected
    "PLR2004",             # magic values (ports, coords) are fine
    "S",                   # security lints less relevant in demo code
    "ERA001",              # commented-out code OK while iterating
    "BLE001",              # broad except is fine for demo error handling
    "TC001", "TC003",      # type-checking imports not needed in standalone scripts
    "PLR0915",             # long main() functions OK in demos
    "SIM113",              # enumerate not always clearer
]

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
# The `javascript` package (JSPyBridge) ships no type stubs; treat its surface as Any.
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
# `@bot.on(event)` decorates inner functions whose names are only referenced
# by the decorator — strict mode flags every handler as unused. Disable the
# rule project-wide so student scripts don't drown in false positives.
reportUnusedFunction = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring a running Minecraft server",
]

[tool.coverage.run]
source = ["src/minethon"]

[tool.coverage.report]
show_missing = true
skip_empty = true
